Update name of project in test csproj file

--- a/ToDoList.Tests/ToDoList.Tests.csproj
+++ b/ToDoList.Tests/ToDoList.Tests.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CSharpTemplate\CSharpTemplate.csproj" />  
+    <ProjectReference Include="..\ToDoList\ToDoList.csproj" />  
   </ItemGroup>
 
 </Project>
